# scholar-link

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  routes.py
config/: cache.py  settings.py
controller/: controller_dependencies.py  paper_controller.py  semantic_search_controller.py  validation_controller.py
core/: anthropic_client.py  embeddings_retriever.py  entities.py  llm_verifier.py  pdf_text.py  streaming.py  verification_pipeline.py
model/: api.py  claim.py  job.py
repository/: blob_repository.py  claim_buffer_repository.py  job_repository.py  namespaces.py  verification_repository.py
service/: api_key_validation_service.py  paper_service.py  semantic_scholar_service.py
util/: constants.py  enums.py  errors.py  functions.py  logger.py  timing.py  types.py
